# python-sc2

./: .gitignore  .travis.yml  generate_id_constants_from_stableid.py  pyproject.toml
sc2/: game_data.py  game_state.py
