[tool.poetry]
name = "sc2"
version = "0.11.1"
description = "A StarCraft II API Client for Python 3"
authors = ["Hannes Karppila"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
portpicker = "^1.3"
async-timeout = "3"
s2clientprotocol = "^4.9"
aiohttp = "^3.5"
pyglet = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.701.0"
Pillow = "^6.0"
pipenv = "^2018.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
